tests/baselines/reference/ambientExternalModuleInAnotherExternalModule.errors.txt
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(4,16): error TS2664: Invalid module name in augmentation, module 'ext' cannot be found.
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(9,22): error TS2792: Cannot find module 'ext'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts (2 errors) ====
    class D { }
    export = D;
    
    declare module "ext" {
                   ~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'ext' cannot be found.
        export class C { }
    }
    
    // Cannot resolve this ext module reference
    import ext = require("ext");
                         ~~~~~
!!! error TS2792: Cannot find module 'ext'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    var x = ext;